# cosine-annealing-linear-warmup

./: README.md  environment.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: python-package.yml  python-publish.yml
cosine-warmup/: scheduler.py
cosine_warmup/: __init__.py  scheduler.py
tests/: doctests.py  test_docs.py
