[metadata]
name = cosine_warmup
description = Cosine Annealing Linear Warmup
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    torch
    scheduler
author = Arturo Ghinassi
author_email = ghinassiarturo8@gmail.com
project_urls =
    Source = https://github.com/santurini/cosine-annealing-linear-warmup
    Tracker = https://github.com/santurini/cosine-annealing-linear-warmup/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
